; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_msc.c_pev_assign.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_msc.c_pev_assign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pevaluator = type { i32 }

@PEV_MAX_LEN = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"assign: %s isn't a variable\00", align 1
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pevaluator*)* @pev_assign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pev_assign(%struct.pevaluator* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pevaluator*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.pevaluator* %0, %struct.pevaluator** %3, align 8
  %8 = load i32, i32* @PEV_MAX_LEN, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %4, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %5, align 8
  %12 = load %struct.pevaluator*, %struct.pevaluator** %3, align 8
  %13 = call i32 @pev_pop_val(%struct.pevaluator* %12, i32* %6)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load %struct.pevaluator*, %struct.pevaluator** %3, align 8
  %17 = call i32 @pev_pop(%struct.pevaluator* %16, i8* %11)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %21, label %19

19:                                               ; preds = %15, %1
  %20 = load i32, i32* @FALSE, align 4
  store i32 %20, i32* %2, align 4
  store i32 1, i32* %7, align 4
  br label %34

21:                                               ; preds = %15
  %22 = getelementptr inbounds i8, i8* %11, i64 0
  %23 = load i8, i8* %22, align 16
  %24 = sext i8 %23 to i32
  %25 = icmp ne i32 %24, 36
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = load %struct.pevaluator*, %struct.pevaluator** %3, align 8
  %28 = call i32 @PEV_ERROR1(%struct.pevaluator* %27, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i8* %11)
  store i32 %28, i32* %2, align 4
  store i32 1, i32* %7, align 4
  br label %34

29:                                               ; preds = %21
  %30 = load %struct.pevaluator*, %struct.pevaluator** %3, align 8
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @pev_set_value(%struct.pevaluator* %30, i8* %11, i32 %31)
  %33 = load i32, i32* @TRUE, align 4
  store i32 %33, i32* %2, align 4
  store i32 1, i32* %7, align 4
  br label %34

34:                                               ; preds = %29, %26, %19
  %35 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %35)
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @pev_pop_val(%struct.pevaluator*, i32*) #2

declare dso_local i32 @pev_pop(%struct.pevaluator*, i8*) #2

declare dso_local i32 @PEV_ERROR1(%struct.pevaluator*, i8*, i8*) #2

declare dso_local i32 @pev_set_value(%struct.pevaluator*, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
